--- a/style.css
+++ b/style.css
@@ -111,8 +111,8 @@ a[title="Home"] {
 
 /* Main content styles */
 #main-photo {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
 }
 
 #main {
@@ -208,7 +208,9 @@ header button {
     margin-bottom: 60px;
     margin-left: 30px;
     display: flex;
+    overflow: scroll;
 }
+
 main h2{
     margin-left: 30px;
     font-weight: 600;
@@ -218,6 +220,13 @@ main h2{
     width: 230px;
     margin-left: 5px;
     cursor: pointer;
+}
+.cards::-webkit-scrollbar{
+    width: 0;
+}
+.cards i{
+    font-size: 50px;
+    transform: translate(0px,20px);
 }
 
 /*Footer Tag*/
@@ -254,3 +263,32 @@ table a:hover{
     text-decoration: underline;
 }
 
+/* Responsive website */
+
+@media  screen and (max-width: 1204px) {
+    a[title="News & Popular"]{
+        display: none;
+    }
+    a[title="Browse by Language"]{
+        display: none;
+    }
+}
+@media screen and (max-width: 720px){
+    #main{
+        display: none;
+    }
+    a[title="children"]{
+        display: none;
+    }
+    a[title="My List"]{
+        display: none;
+    }
+    #down{
+        display: none;
+    }
+}
+@media screen and (max-width: 580px) {
+    .tabs{
+        display: none;
+    }
+}
